--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "prepublish": "gulp prepublish",
     "test": "gulp"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "html-minifier": "^3.1.0"
+  }
 }
