--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-vue",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "description": "Vue rendering engine for Express.js",
   "homepage": "https://github.com/danmademe/express-vue",
   "author": {
@@ -18,24 +18,25 @@
     "node"
   ],
   "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-preset-es2015": "6.9.0",
+    "babel-register": "^6.9.0",
+    "del": "^2.0.2",
     "eslint": "^3.1.1",
     "eslint-config-xo-space": "^0.14.0",
-    "babel-eslint": "^6.1.2",
     "eslint-plugin-babel": "^3.3.0",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^2.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-line-ending-corrector": "^1.0.1",
     "gulp-istanbul": "^1.0.0",
+    "gulp-line-ending-corrector": "^1.0.1",
     "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.0",
     "gulp-nsp": "^2.1.0",
-    "gulp-coveralls": "^0.1.0",
-    "gulp-babel": "^6.1.2",
-    "del": "^2.0.2",
-    "babel-core": "^6.11.4",
-    "babel-register": "^6.9.0",
-    "babel-preset-es2015": "6.9.0",
+    "gulp-plumber": "^1.0.0",
     "isparta": "^4.0.0"
   },
   "eslintConfig": {
@@ -51,6 +52,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "html-minifier": "^3.1.0"
+    "babel-core": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-preset-es2015": "^6.9.0",
+    "html-minifier": "^3.1.0",
+    "vue": "^2.0.3",
+    "vue-server-renderer": "^2.0.3"
   }
 }
