--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "babel-core": "^6.18.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-preset-es2015": "^6.9.0",
     "html-minifier": "^3.1.0",
