solved an issue with callbacks with large files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
         "sourceType": "module"
     },
     "extends": "eslint:recommended",
+    "parser": "babel-eslint",
     "rules": {
         "indent": [
             "error",
