--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-preset-es2015": "^6.9.0",
     "html-minifier": "^3.2.3",
+    "param-case": "^2.1.0",
     "require-from-string": "^1.2.1",
     "vue": "^2.1.3",
     "vue-server-renderer": "^2.1.3",
