--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-preset-es2015": "^6.9.0",
     "html-minifier": "^3.2.3",
     "param-case": "^2.1.0",
+    "pug": "^2.0.0-beta11",
     "require-from-string": "^1.2.1",
     "vue": "^2.1.3",
     "vue-server-renderer": "^2.1.3",
