added warnings and structured data, also updated readme

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,11 @@
         "semi": [
             "error",
             "always"
+        ],
+        "no-console": [
+            "error", {
+                "allow": ["warn", "error"] 
+            }
         ]
     }
 }
