--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "express",
     "node"
   ],
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
