--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
-- v7
-- v6
+  - v7
+  - v6
+after_success: npm run coverage
 deploy:
   skip_cleanup: true
   provider: npm
