--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
   },
   "devDependencies": {
     "ava": "^0.18.2",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-register": "^6.18.0",
+    "babel-register": "^6.24.0",
     "coveralls": "^2.12.0",
     "del": "^2.2.2",
-    "eslint": "^3.11.0",
+    "eslint": "^3.18.0",
     "eslint-config-xo-space": "^0.16.0",
     "eslint-plugin-babel": "^4.0.0",
     "express": "^4.14.0",
@@ -63,7 +63,7 @@
     "gulp-exclude-gitignore": "^1.1.1",
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-nsp": "^2.4.2",
-    "nyc": "^10.1.2"
+    "nyc": "^10.2.0"
   },
   "eslintConfig": {
     "extends": "xo-space",
@@ -82,11 +82,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "babel-core": "^6.18.0",
-    "babel-preset-es2015": "^6.9.0",
-    "html-minifier": "^3.2.3",
-    "param-case": "^2.1.0",
-    "pug": "^2.0.0-beta11",
+    "babel-core": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0",
+    "html-minifier": "^3.4.2",
+    "param-case": "^2.1.1",
+    "pug": "2.0.0-beta11",
     "require-from-string": "^1.2.1",
     "vue": "^2.2.6",
     "vue-server-renderer": "^2.2.6",
