--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     ]
   },
   "devDependencies": {
-    "ava": "^0.19.1",
+    "ava": "0.18.2",
     "babel-eslint": "^7.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
