--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "camel-case": "^3.0.0",
+    "clean-css": "^4.1.2",
     "html-minifier": "^3.4.3",
     "param-case": "^2.1.1",
     "pug": "2.0.0-beta11",
