--- a/package.json
+++ b/package.json
@@ -43,27 +43,27 @@
     ]
   },
   "devDependencies": {
-    "ava": "0.18.2",
+    "ava": "^0.19.1",
     "babel-eslint": "^7.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-register": "^6.24.1",
     "coveralls": "^2.13.0",
-    "del": "^2.2.2",
-    "eslint": "^3.19.0",
+    "del": "^3.0.0",
+    "eslint": "^4.0.0",
     "eslint-config-xo-space": "^0.16.0",
     "eslint-plugin-babel": "^4.0.0",
     "express": "^4.14.0",
-    "flow-bin": "^0.44.2",
+    "flow-bin": "^0.48.0",
     "gulp": "^3.9.1",
     "gulp-ava": "^0.17.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
-    "gulp-eslint": "^3.0.1",
+    "gulp-eslint": "^4.0.0",
     "gulp-exclude-gitignore": "^1.1.1",
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-nsp": "^2.4.2",
-    "nyc": "^10.2.0"
+    "nyc": "^11.0.2"
   },
   "eslintConfig": {
     "extends": "xo-space",
@@ -92,7 +92,7 @@
     "gulp-nodemon": "^2.2.1",
     "html-minifier": "^3.4.3",
     "param-case": "^2.1.1",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.0-rc.2",
     "require-from-string": "^1.2.1",
     "vue": "^2.3.0",
     "vue-server-renderer": "^2.3.0",
