--- a/package.json
+++ b/package.json
@@ -43,27 +43,27 @@
     ]
   },
   "devDependencies": {
-    "ava": "^0.19.1",
+    "ava": "^0.20.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-register": "^6.24.1",
     "coveralls": "^2.13.0",
     "del": "^3.0.0",
-    "eslint": "^4.0.0",
+    "eslint": "^4.2.0",
     "eslint-config-xo-space": "^0.16.0",
     "eslint-plugin-babel": "^4.0.0",
     "express": "^4.14.0",
-    "flow-bin": "^0.48.0",
+    "flow-bin": "^0.49.1",
     "gulp": "^3.9.1",
-    "gulp-ava": "^0.17.1",
+    "gulp-ava": "^0.18.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^4.0.0",
     "gulp-exclude-gitignore": "^1.1.1",
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-nsp": "^2.4.2",
-    "nyc": "^11.0.2"
+    "nyc": "^11.0.3"
   },
   "eslintConfig": {
     "extends": "xo-space",
@@ -87,7 +87,8 @@
     "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "camel-case": "^3.0.0",
-    "clean-css": "^4.1.2",
+    "clean-css": "^4.1.6",
+    "express-vue-renderer": "^0.2.1",
     "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.2.1",
     "html-minifier": "^3.4.3",
