--- a/package.json
+++ b/package.json
@@ -89,10 +89,11 @@
     "babel-preset-es2015": "^6.24.1",
     "camel-case": "^3.0.0",
     "clean-css": "^4.1.6",
-    "express-vue-renderer": "^0.3.0",
+    "express-vue-renderer": "^0.4.0",
     "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.2.1",
     "html-minifier": "^3.4.3",
+    "lru-cache": "^4.1.1",
     "node-cache": "^4.1.1",
     "param-case": "^2.1.1",
     "pug": "^2.0.0-rc.2",
