--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     },
     "repository": "express-vue/express-vue",
     "scripts": {
-        "start": "gulp",
+        "start": "node example/index.js",
+        "debug": "node --inspect example/index.js",
         "clean": "rimraf dist",
         "build": "npm run clean && npm run copy",
         "copy": "ncp src lib && babel lib -d lib",
