added release script

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "express": "^4.15.4",
         "flow-bin": "^0.52.0",
         "flow-remove-types": "^1.2.1",
+        "generate-release": "^0.13.0",
         "ncp": "^2.0.0",
         "nsp": "^2.7.0",
         "nyc": "^11.1.0",
@@ -78,6 +79,7 @@
         "clean": "rimraf dist",
         "build": "npm run clean && npm run copy",
         "copy": "ncp src lib && babel lib -d lib",
+        "release": "generate-release",
         "prepublish": "npm run build",
         "test": "eslint lib && nsp check && nyc ava",
         "preversion": "npm test",
