--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "ava": {
     "files": [
-      "test/**/*.js"
+      "test/**/*.js",
+      "!test/example/**/*.js"
     ],
     "source": [
       "src/**/*.js",
@@ -74,8 +75,8 @@
   },
   "repository": "express-vue/express-vue",
   "scripts": {
-    "start": "node example/index.js",
-    "debug": "node --inspect example/index.js",
+    "start": "node test/example/index.js",
+    "debug": "node --inspect test/example/index.js",
     "clean": "rimraf dist",
     "build": "npm run clean && npm run copy",
     "copy": "ncp src lib && babel lib -d lib",
@@ -94,7 +95,7 @@
     "babel-preset-es2015": "^6.24.1",
     "camel-case": "^3.0.0",
     "clean-css": "^4.1.7",
-    "express-vue-renderer": "^0.6.8",
+    "express-vue-renderer": "^0.6.9",
     "html-minifier": "^3.5.3",
     "lru-cache": "^4.1.1",
     "node-cache": "^4.1.1",
