--- a/package.json
+++ b/package.json
@@ -50,24 +50,21 @@
     "ava": "^0.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
+    "babel-eslint": "^8.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "codecov": "^3.0.0",
     "del": "^3.0.0",
-    "eslint": "^4.11.0",
+    "eslint": "^4.14.0",
     "eslint-config-xo-space": "^0.17.0",
     "eslint-plugin-babel": "^4.1.2",
     "express": "^4.16.1",
-    "flow-bin": "^0.59.0",
-    "flow-remove-types": "^1.2.1",
     "generate-release": "^0.14.0",
     "ncp": "^2.0.0",
     "nsp": "^3.1.0",
-    "nyc": "^11.3.0",
+    "nyc": "^11.4.1",
     "rimraf": "^2.6.2"
   },
   "eslintConfig": {
@@ -80,20 +77,16 @@
   "scripts": {
     "start": "node test/example/index.js",
     "debug": "node --inspect test/example/index.js",
-    "clean": "rimraf dist",
-    "build": "npm run clean && npm run copy",
-    "copy": "ncp src lib && babel lib -d lib",
     "release": "generate-release",
-    "prepublish": "npm run build",
     "test": "eslint lib && nsp check && nyc ava",
     "preversion": "npm test",
-    "version": "npm run build && git add -A",
+    "version": "git add -A",
     "postversion": "git push && git push --tags",
     "coverage": "nyc report --reporter=lcov > coverage.lcov && codecov"
   },
   "license": "Apache-2.0",
   "dependencies": {
     "debug": "^3.1.0",
-    "express-vue-renderer": "^0.7.3"
+    "vue-pronto": "^0.2.0"
   }
 }
