--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-vue",
-  "version": "5.0.1",
+  "version": "5.0.0",
   "description": "Vue rendering engine for Express.js",
   "homepage": "https://github.com/express-vue/express-vue",
   "author": {
@@ -27,8 +27,7 @@
       "!test/example/**/*.js"
     ],
     "source": [
-      "src/**/*.js",
-      "!lib/**/*"
+      "lib/**/*.js"
     ],
     "concurrency": 5,
     "failFast": false,
@@ -43,7 +42,7 @@
       "**/*.vue"
     ],
     "include": [
-      "src/**/*.js"
+      "lib/**/*.js"
     ]
   },
   "devDependencies": {
