--- a/package.json
+++ b/package.json
@@ -46,17 +46,17 @@
     ]
   },
   "devDependencies": {
-    "ava": "^0.23.0",
+    "ava": "^0.24.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.1.2",
+    "babel-eslint": "^8.2.1",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "codecov": "^3.0.0",
     "del": "^3.0.0",
-    "eslint": "^4.14.0",
+    "eslint": "^4.16.0",
     "eslint-config-xo-space": "^0.17.0",
     "eslint-plugin-babel": "^4.1.2",
     "express": "^4.16.1",
@@ -86,6 +86,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "debug": "^3.1.0",
-    "vue-pronto": "^0.2.0"
+    "vue": "^2.5.13",
+    "vue-pronto": "^0.2.2",
+    "vue-template-compiler": "^2.5.13"
   }
 }
