--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
   "scripts": {
     "start": "node test/example/index.js",
     "debug": "VUE_DEV=true node --inspect test/example/index.js",
-    "release": "generate-release",
+    "release": "npm test && generate-release",
     "lint": "tslint --project tsconfig.json",
     "test": "npm run lint && nsp check && nyc ava",
     "preversion": "npm test",
@@ -89,6 +89,6 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "vue-pronto": "^1.4.0"
+    "vue-pronto": "^1.4.2"
   }
 }
