--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-vue",
-  "version": "5.5.3",
+  "version": "5.6.0-beta",
   "description": "Vue rendering engine for Express.js",
   "homepage": "https://github.com/express-vue/express-vue",
   "author": {
