--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@types/yargs": "^13.0.0",
     "chalk": "^2.4.2",
     "figlet": "^1.2.3",
-    "vue-pronto": "^1.11.1"
+    "vue-pronto": "^1.11.2",
+    "yargs": "^13.3.0"
   }
 }
