--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -1,22 +1,26 @@
+name: Node CI
+
 on: [push]
 
-name: Node.js
-
 jobs:
-
   build:
-    name: Build
+
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [8.x, 10.x, 12.x]
+
     steps:
-
-    - uses: actions/checkout@master
-
-    - name: Use Node.js 10.x
-      uses: actions/setup-node@master
+    - uses: actions/checkout@v1
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
       with:
-        version: 10.x
-
-    - name: npm install, and test
+        node-version: ${{ matrix.node-version }}
+    - name: npm install, build, and test
       run: |
-        npm install
+        npm ci
+        npm run build --if-present
         npm test
+      env:
+        CI: true
