--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
+    "@types/express": "^4.17.6",
     "@types/node": "^10.17.17",
     "ava": "^1.4.1",
     "babel-cli": "^6.26.0",
